[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_extras = { version = "0.28.1", features = ["default", "image"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
lazy_static = "1.5.0"